@@ -22,8 +22,10 @@ Post-v2.8.0
      * ovn-ctl: New commands run_nb_ovsdb and run_sb_ovsdb.
    - Linux kernel 4.13
      * Add support for compiling OVS with the latest Linux 4.13 kernel
-   - "flush-conntrack" in ovs-dpctl and ovs-appctl now accept a 5-tuple to
-     delete a specific connection tracking entry.
+   - ovs-dpctl and related ovs-appctl commands:
+     * "flush-conntrack" now accept a 5-tuple to delete a specific
+       connection tracking entry.
+     * New "ct-set-maxconns" and "ct-get-maxconns" for userspace datapath.
    - DPDK:
      * Add support for DPDK v17.11
      * Add support for vHost IOMMU
